# orgeat

./: LICENSE.md  README.md  dune-project  orgeat.opam
src/: boltzmann.ml  combi.ml  dune  from_encoding.ml  literal.ml  literal.mli  misc.ml  misc.mli  sampler.ml  scalar.ml  solver.ml  solver.mli  species.ml  species.mli
test/: dune  main.ml  test_boltzmann.ml  test_solver.ml  test_species.ml
