(lang dune 2.8)
(name orgeat)
(version 0.0.1)
(generate_opam_files true)
(source (uri git+https://github.com/lrand-nl/orgeat))
(bug_reports http://github.com/lrand-nl/orgeat)
(homepage http://github.com/lrand-nl/orgeat)
(authors "Lucas Randazzo")
(maintainers "lucas.randazzo@nomadic-labs.com")

(package
 (name orgeat)
 (synopsis "Ocaml Random Generation of Arbitrary Types")
 (description "Ocaml Random Generation of Arbitrary Types")
 (license MIT)
 (depends (dune (>= 2.8))
 	  (ocaml (>= 4.12.0))
	  (zarith (>= 1.11))
	  (data-encoding (>= 0.4))
	  (smol (>= 0.0.1))
	  (smol-helpers (and :with-test (>= 0.0.1)))
    	  (alcotest (and :with-test (>= 1.4.0))))
)
