(executables
 (names main)
 (libraries alcotest
            zarith
	    orgeat
	    smol
	    smol.helpers
	    data-encoding))

(rule
 (alias buildtest)
 (deps main.exe)
 (action (progn)))

(rule
 (alias runtest_main)
 (action (run %{exe:main.exe})))

(rule
 (alias runtest)
 (package orgeat)
 (deps (alias runtest_main))
 (action (progn)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
